Better spacing on larger screens, and fixes tracker url at users activity

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -131,3 +131,27 @@ a, .btn-link {
 .not-show {
     display: none;
 }
+
+@media (min-width: 1400px) {
+  .content {
+    zoom: 1.1
+  }
+}
+
+@media (min-width: 1700px) {
+  .content {
+    zoom: 1.3
+  }
+}
+
+@media (min-width: 2000px) {
+  .content {
+    zoom: 1.5
+  }
+}
+
+@media (min-width: 2500px) {
+  .content {
+    zoom: 1.7
+  }
+}
